syntax = "proto3";

package shoppb;

option go_package = "proto/shoppb";

import "google/protobuf/timestamp.proto";

service ShopService {
  rpc CreateShop(CreateShopRequest) returns (CreateShopResponse);
  rpc ListOwnedShops(ListOwnedShopsRequest) returns (ListShopsResponse);
  rpc ValidateShop(ValidateShopRequest) returns (ValidateShopResponse);
  rpc UpdateShop(UpdateShopRequest) returns (ShopResponse);
  rpc DeleteShop(DeleteShopRequest) returns (DeleteShopResponse);
}

message CreateShopRequest {
  string name = 1;
  string slug = 2;
  string description = 3;
  string logo = 4;
}

message CreateShopResponse {
  string shop_id = 1;
  google.protobuf.Timestamp created_at = 2;
}

message ListOwnedShopsRequest {}

message ListShopsResponse {
  repeated ShopResponse shops = 1;
}

message ValidateShopRequest {
  string shop_id = 1;
}

message ValidateShopResponse {
  string id = 1;
  string slug = 2;
}

message ShopResponse {
  string id = 1;
  string name = 3;
  string slug = 4;
  string description = 5;
  string logo = 6;
  bool is_active = 7;

  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}


message UpdateShopRequest {
  string name = 1;
  string shop_id = 2;
  string description = 3;
  string logo = 4;
  bool is_active = 5;
}

message DeleteShopRequest {
  string shop_id = 1;
}

message DeleteShopResponse {
  bool success = 1;
}