syntax = "proto3";

package product;

option go_package = "proto/productpb;productpb";

message GetProductRequest {
  string product_id = 1;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  double price = 3;
}

service ProductService {
  rpc GetProductByID(GetProductRequest) returns (ProductResponse);
}
